2011-04-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-message.el (bbdb-insinuate-message)
	(bbdb-insinuate-mail)
	* lisp/bbdb-rmail.el (bbdb-insinuate-rmail)
	* lisp/bbdb-gnus.el (bbdb-insinuate-gnus)
	* lisp/bbdb-mhe.el (bbdb-insinuate-mh)
	* lisp/bbdb-vm.el (bbdb-insinuate-vm): Fix docstring.

2011-04-23  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mode-map): Do no call set-keymap-parent which
	is done already by define-derived-mode.  Reported by Sam Steingold
	<sds@gnu.org>.  Add menu binding for revert-buffer.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-create-hook, bbdb-change-hook): Use defvar.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-time-stamp-format): Includes timezone info.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* TODO: New file.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-faces): Group of faces used by BBDB.
	(bbdb-name, bbdb-organization, bbdb-field-name): New faces.
	(bbdb-display-name-organization, bbdb-display-record-one-line)
	(bbdb-display-record-multi-line): Use them.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mode-map): Inherit from special-mode-map.
	(bbdb-quit-window): Renamed from bbdb-bury-buffer.  Use
	quit-window.
	(bbdb-mode):  Use define-derived-mode.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-indent-string): New function.
	(bbdb-display-record-multi-line): Use it.  (Bug#33101)

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el:  Autoload browse-url-url-at-point.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-create-hook, bbdb-change-hook):  Call
	add-hook for the default hook functions.

2011-04-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): Ensure initialization of
	the database.

2011-04-10  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-utilities-anniv): New customization group.